--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,14 @@ body {
     color: #050038;
 }
 
+a {
+    text-decoration: none;
+}
+
+.none {
+    display: none;
+}
+
 /* HEADER */
 
 header {
@@ -28,6 +36,7 @@ header {
 
 .navbar-collapse {
     flex-grow: 0!important;
+    margin-top: 20px;
 }
 
 .navbar-nav {
@@ -75,6 +84,7 @@ header {
     font-weight: 500;
     line-height: 1.16;
     border-radius: 30px;
+    margin: 0 auto;
 }
 
 /* HEADER MAIN */
@@ -146,4 +156,211 @@ header {
     height: 1px;
     width: 100%;
     background-color: #5b5e6d25;
+}
+
+
+/* MAIN */
+
+main {
+    margin-bottom: 100px;
+}
+
+/* ADVANTAGE */
+
+.advantage {
+    margin-bottom: 100px;
+}
+
+.advantage_name {
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 1.26;
+    font-family: 'CircularStd', sans-serif;
+    max-width: 849px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+
+.advantage-text {
+    font-size: 20px;
+    line-height: 1.6;
+    max-width: 778px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+
+.see-how-text {
+    text-align: center;
+    font-size: 15px;
+    line-height: 1.5;
+    padding: 11px 22px;
+    background: rgba(5, 85, 255, 0.1);
+    border-radius: 30px;
+    color: #0555FF;
+    max-width: 245px;
+    margin: 0 auto;
+}
+
+.see-how-text::before {
+    content: "!";
+    padding: 3px 10px;
+    background-color: white;
+    border-radius: 50%;
+    margin-right: 12px;
+}
+
+/* DEVELOP */ 
+
+.develop {
+    margin-bottom: 100px;
+}
+
+.block-text  {
+    padding: 50px;
+}
+
+.block_name {
+    font-family: 'CircularStd', sans-serif;
+    font-size: 72px;
+    font-weight: 900;
+    line-height: 1.26;
+    margin-bottom: 30px;
+}
+.block_text {
+    font-size: 20px;
+    line-height: 1.6;
+    color: #5B5E6D;
+}
+.link-more {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.2;
+    color: #000000;
+    border-bottom: 2px solid #0555FF;
+}
+
+/* UPDATE */ 
+.update {
+    margin-bottom: 100px;
+}
+
+
+/* TWITTER */ 
+.twiter {
+    background-color: #F8F8FA;
+}
+
+.twiter-text {
+    font-size: 14px;
+    line-height: 2;
+    color: #5B5E6D;
+    margin-bottom: 20px;
+}
+
+.twiter-name {
+    font-size: 52px;
+    line-height: 32px;
+    font-weight: 900;
+    font-family: 'CircularStd', sans-serif;
+    color: #050038;
+    margin-bottom: 70px;
+}
+
+.twiter-block {
+    padding: 20px;
+    background-color: white;
+    border-radius: 20px;
+}
+.account_name {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    font-family: 'CircularStd', sans-serif;
+    color: #050038;
+}
+
+.account_name::after {
+    content: "";
+    margin-left: 10px;
+    display: inline-block;
+    height: 15px;
+    width: 15px;
+    background-image: url(../img/account-check.svg);
+}
+.account_et {
+    font-size: 16px;
+    color: #596068;
+    line-height: 1.5;
+}
+
+.account-text {
+    max-width: 370px;
+    margin: 25px auto;
+    font-size: 14px;
+    line-height: 1.7;
+}
+
+/* FOOTER */
+
+footer {
+    background-image: url(../img/footer.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.footer-name {
+    font-size: 52px;
+    line-height: 75px;
+    font-weight: 900;
+    font-family: 'CircularStd', sans-serif;
+    color: #FFFFFF;
+    margin-bottom: 70px;
+    margin-top: 100px;
+}
+
+.form-footer {
+    padding: 24px 30px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 10px 0px 0px 10px;
+    background-color: #130C3A;
+    font-size: 22px;
+    line-height: 1.45;
+}
+.btn-footer {
+    padding: 24px 50px;
+    color: white;
+    background: #0555FF;
+    border-radius: 0px 10px 10px 0px;
+    border: none;
+    font-size: 22px;
+    line-height: 1.45;
+}
+
+/* FOOTER NAV */
+.footer-nav {
+    color: white;
+}
+
+.footer-nav-name {
+    padding-left: 32px;
+    margin-bottom: 33px;
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.footer-nav-item {
+    list-style: none;
+    margin-bottom: 10px;
+}
+
+.footer-nav-link {
+    font-size: 16px;
+    color: #7884A6;
+    line-height: 1.75;
+}
+
+.last-text {
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 1.2;
 }
